// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoutingDestinationContentPicker displayName should correctly render logicalDestination EndOfQuestionnaire 1`] = `
<Fragment>
  <ContentPickerSelect__ContentSelectButton
    data-test="content-picker-select"
    disabled={false}
    onClick={[Function]}
    type="button"
    variant="primary"
  >
    <ContentPickerSelect__ContentSelected>
      End of questionnaire
    </ContentPickerSelect__ContentSelected>
  </ContentPickerSelect__ContentSelectButton>
  <ContentPicker
    contentType="Destination"
    data={Array []}
    data-test="picker"
    isOpen={false}
    onClose={[Function]}
    onSubmit={[Function]}
    singleItemSelect={true}
  />
</Fragment>
`;

exports[`RoutingDestinationContentPicker displayName should correctly render page display name 1`] = `
<Fragment>
  <ContentPickerSelect__ContentSelectButton
    data-test="content-picker-select"
    disabled={false}
    onClick={[Function]}
    type="button"
    variant="primary"
  >
    <ContentPickerSelect__ContentSelected>
      page name
    </ContentPickerSelect__ContentSelected>
  </ContentPickerSelect__ContentSelectButton>
  <ContentPicker
    contentType="Destination"
    data={Array []}
    data-test="picker"
    isOpen={false}
    onClose={[Function]}
    onSubmit={[Function]}
    singleItemSelect={true}
  />
</Fragment>
`;

exports[`RoutingDestinationContentPicker displayName should correctly render section display name 1`] = `
<Fragment>
  <ContentPickerSelect__ContentSelectButton
    data-test="content-picker-select"
    disabled={false}
    onClick={[Function]}
    type="button"
    variant="primary"
  >
    <ContentPickerSelect__ContentSelected>
      section name
    </ContentPickerSelect__ContentSelected>
  </ContentPickerSelect__ContentSelectButton>
  <ContentPicker
    contentType="Destination"
    data={Array []}
    data-test="picker"
    isOpen={false}
    onClose={[Function]}
    onSubmit={[Function]}
    singleItemSelect={true}
  />
</Fragment>
`;

exports[`RoutingDestinationContentPicker displayName should render with no display name if loading and next page selected 1`] = `
<Fragment>
  <ContentPickerSelect__ContentSelectButton
    data-test="content-picker-select"
    disabled={true}
    onClick={[Function]}
    type="button"
    variant="primary"
  >
    <ContentPickerSelect__ContentSelected />
  </ContentPickerSelect__ContentSelectButton>
  <ContentPicker
    contentType="Destination"
    data={Array []}
    data-test="picker"
    isOpen={false}
    onClose={[Function]}
    onSubmit={[Function]}
    singleItemSelect={true}
  />
</Fragment>
`;

exports[`RoutingDestinationContentPicker should render 1`] = `
<Fragment>
  <ContentPickerSelect__ContentSelectButton
    data-test="content-picker-select"
    disabled={false}
    onClick={[Function]}
    type="button"
    variant="primary"
  >
    <ContentPickerSelect__ContentSelected>
      End of questionnaire
    </ContentPickerSelect__ContentSelected>
  </ContentPickerSelect__ContentSelectButton>
  <ContentPicker
    contentType="Destination"
    data={Array []}
    data-test="picker"
    isOpen={false}
    onClose={[Function]}
    onSubmit={[Function]}
    singleItemSelect={true}
  />
</Fragment>
`;
